[package]
name = "windows-browser-decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
dirs = "5.0"
aes-gcm = "0.10.3"
serde_json = "1.0.108"
tempfile = "3.8.1"
base64 = "0.21.5"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography"
]
